--- a/index.html
+++ b/index.html
@@ -6,3 +6,56 @@
   <li> < href="https://orcid.org/0009-0001-5589-1643">ORCID</a> </li>
   <li> < href="https://www.linkedin.com/in/cheng-zhao-0001just">Linkedin</a> </li>
 </ul>
+PERSONAL STATEMENT 
+I am currently conducting research on the impact of ElNiño on the spread of biomass burning in Indonesia. My research
+combines satellite data and Python programming to reveal that El Niño affects soil moisture in peatlands during the
+dry season, which can lead to major fire events. I have a BSc in Environmental Science from Gannan Normal University.
+There, I developed cost-effective online monitoring spectrometers and honed my laboratory skills in developing
+absorbing materials for VOCs and using spectrometers. I am looking for a suitable PhD position to further study the
+health effects of air pollutants.
+EDUCATION 
+University of Leeds West Yorkshire, UK
+M.Res. Climate and Atmospheric Science Expected September 2024 
+Gannan Normal University Jiangxi, CHN
+B.S. Environmental Science July 2019
+B.A. English July 2019 
+RESEARCH EXPERIENCE 
+Impact of El Niño on the spread of biomass burning in Indonesia 
+Supervisor: Dr. Jim McQuaid & Dr. Ailish Graham December 2023 – September 2024
+▪ Analyzed the correlation between fire occurrences and El Niño using NASA FRIM fire data.
+▪ Quantified the impact of El Niño on peatlands with SMAP satellite data, identifying a significant increase in fire risk 
+during El Niño years.
+▪ Presented findings at the ICAS research seminar, receiving positive feedback and suggestions for further exploration.
+Development of a spectral instrument for rapid online detection of atmospheric pollutants (Final year projects)
+Supervisor: Dr. Yuhan He September 2022-May 2023 
+▪ Developed a low-cost fiber optic spectrometer for laboratory use, achieving a spectral resolution of <3nm.
+▪ Validated the spectrometer with MATLAB, ensuring an error rate of <0.1%, demonstrating reliability for industrial 
+exhaust gas monitoring.
+▪ Implemented the instrument in industrial settings, reducing monitoring costs by 20%.
+Research and Development of Molecular Sieve for VOCs Gas Purification Equipment
+Supervisor: Dr. Fei Ma September 2020-August 2022 
+▪ Synthesized high-efficiency molecular sieves with >95% VOC absorption.
+▪ Conducted over 400 hours of laboratory experiments, leading to successful pilot-scale testing and a 15% 
+improvement in absorption efficiency.
+▪ Advanced gas purification technology, contributing to a 10% reduction in operational costs.
+WORK EXPERIENCE 
+Jiangxi Songman Technology Co., Ltd. Jiangxi, CHN 
+General Manager January 2022-August 2023
+▪ Led R&D initiatives that improved VOC absorption equipment efficiency to 97.3%, surpassing national standards.
+▪ Managed environmental restoration projects for Ming Lake, achieving a 40% reduction in water pollution.
+▪ Engineered an energy-efficient indoor environmental control system, reducing energy consumption by 15%.
+Hami Ecological Environment Bureau Xinjiang, CHN 
+Interns 2020 Summer
+▪ Conducted field sampling and laboratory analysis of environmental samples.
+▪ Monitored waste gas emissions from chemical enterprises, ensuring compliance with environmental regulations.
+▪ Compiled environmental data, contributing to policy recommendations aimed at reducing industrial pollution.
+ACTIVITIES & HONNER 
+Course Representative, MRes CAS, University of Leeds (2023-2024)
+Student Member, Royal Meteorological Society; European Geosciences Union (EGU)
+Candidate, Self-improvement Star of Chinese College Students (2022)
+Head, China University Student Innovation Project (Provincial Level) (2022-2023)
+Member, Student Union, Gannan Normal University (2019-2022)
+SKILL 
+Computer Skills: Python, MATLAB, AutoCAD, ArcGIS 
+Languages: English (Intermediate), Chinese (Native)
+Other Skills: Team leadership, project management, technical writin
